# orion

./: .coveragerc  .flake8  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  CITATION.bib  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  RESEARCH.md  ROADMAP.md  codecov.yml  conda_build_config.yaml  dev-requirements.txt  dump.py  orion_db.pkl  out.txt  parent_config.yaml  requirements.txt  sample.py  setup.cfg  setup.py  tox.ini  versioneer.py  warm_start_debug.py
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  dashboard-build.yml  dashboard-src-new-with-playwright.yml  dashboard-src.yml  dashboard.yml  fake_orion_server.json  fake_orion_server.py  node.js.yml  orion-docs.yml  orion-flake8.yml  orion-pylint.yml  orion-tests.yml  pre-commit.yaml  release-drafter.yml  release_master_dev_resync.yml  (+2 more)
conda/: build.sh  ci_build.sh  conda_build.sh  conda_build_config.yaml  conda_test.sh  meta.yaml  upload.sh
dashboard/: .gitignore  README.md  build.sh  package-lock.json  package.json  publish.sh  tsconfig.json  update_repo_prologs.sh  webpack.dev.js  webpack.prod.js
docs/: requirements.txt
examples/: README.md  README.rst  base_db.pkl  code_1_python_api_db.pkl  code_2_hyperband_checkpoint_db.pkl  dask_example.py  db.pkl
scripts/: add_users.sh  mongo-non-prriviledge.sh  mongo-priviledge.sh  mongodb.sh  mopt  setup.sh
src/: main.cpp  metaopt.cpp  metaoptd.cpp
tests/: conftest.py  dummy_test.py  orion_config.yaml  requirements.txt  state.py
(+1094 files in other folders)
